--- a/add.html
+++ b/add.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>用户权限操作</title>
-<link rel="stylesheet" type="text/css" href="style/base.css">
-<link rel="stylesheet" type="text/css" href="style/common.css">
-<link rel="stylesheet" type="text/css" href="style/list.css">
+<link rel="stylesheet" type="text/css" href="static/style/base.css">
+<link rel="stylesheet" type="text/css" href="static/style/common.css">
+<link rel="stylesheet" type="text/css" href="static/style/list.css">
 <!--[if IE]>
 <script src="js/html5.js"></script>
 <![endif]-->
