--- a/login.html
+++ b/login.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>登陆</title>
-<link rel="stylesheet" type="text/css" href="style/base.css">
-<link rel="stylesheet" type="text/css" href="style/common.css">
-<link rel="stylesheet" type="text/css" href="style/login.css">
+<link rel="stylesheet" type="text/css" href="static/style/base.css">
+<link rel="stylesheet" type="text/css" href="static/style/common.css">
+<link rel="stylesheet" type="text/css" href="static/style/login.css">
 <script type="text/javascript">
 window.onload=function(){
 	var oPwd=document.getElementById('password');
