--- a/upload.html
+++ b/upload.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>上传</title>
-<link rel="stylesheet" type="text/css" href="style/base.css">
-<link rel="stylesheet" type="text/css" href="style/common.css">
-<link rel="stylesheet" type="text/css" href="style/upload.css">
+<link rel="stylesheet" type="text/css" href="static/style/base.css">
+<link rel="stylesheet" type="text/css" href="static/style/common.css">
+<link rel="stylesheet" type="text/css" href="static/style/upload.css">
 <script type="text/javascript">
 window.onload=window.onresize=function(){
     var clientH=document.documentElement.clientHeight;
