用户名密码输入错误提示

--- a/login.html
+++ b/login.html
@@ -34,6 +34,7 @@ window.onload=function(){
 				</div>
 			</div>
 			<div class="pad">
+				<p class="error">您输入的密码和用户名不匹配</p>
 				<div class="control-group">
 					<div class="controls">
 						<label for="email" class="control-label fa fa-envelope"></label>
