--- a/login.html
+++ b/login.html
@@ -10,6 +10,9 @@
 window.onload=function(){
 	var oPwd=document.getElementById('password');
 	var oLogin=document.getElementById('owl-login');
+	var oForgot = document.getElementById('forgot');
+	var oSign = document.getElementById('sign');
+	var oShowError = document.getElementById('showError');
 	oPwd.onfocus=function()
 	{
 		oLogin.className='password';
@@ -17,6 +20,21 @@ window.onload=function(){
 	oPwd.onblur=function()
 	{
 		oLogin.className='';
+	}
+	oForgot.onclick = function(){
+		var msg = '请联系it管理员重置密码';
+		showError(msg);
+	}
+	oSign.onclick = function(){
+		var msg = '请联系it管理员申请域账号';
+		showError(msg);
+	}
+	function showError(msg){
+		oShowError.innerHTML = msg;
+		oShowError.style.display = 'block';
+		setTimeout(function() {
+            oShowError.style.display = 'none';
+        }, 1500);
 	}
 }
 </script>
@@ -39,21 +57,24 @@ window.onload=function(){
 					<div class="controls">
 						<label for="email" class="control-label fa fa-envelope"></label>
 						<em class="email-icon"></em>
-						<input id="email" type="email" name="email" placeholder="用户名" tabindex="1" autofocus="autofocus" class="form-control input-medium">
+						<input id="email" type="email" name="email" placeholder="域账号" tabindex="1" autofocus="autofocus" class="form-control input-medium">
 					</div>
 				</div>
 				<div class="control-group">
 					<div class="controls">
 						<label for="password" class="control-label fa fa-asterisk"></label>
 						<em class="password-icon"></em>
-						<input id="password" type="password" name="password" placeholder="Password" tabindex="2" class="form-control input-medium">
+						<input id="password" type="password" name="password" placeholder="域密码" tabindex="2" class="form-control input-medium">
 					</div>
 				</div>
 			</div>
 			<div class="form-actions">
-				<a href="/forgot/" tabindex="5" class="btn pull-left btn-link text-muted">Forgot password?</a>
-				<a href="/signup" tabindex="6" class="btn btn-link text-muted">Sign Up</a>
+				<a href="javascript:" tabindex="5" class="btn pull-left btn-link text-muted" id="forgot">Forgot password?</a>
+				<a href="javascript:" tabindex="6" class="btn btn-link text-muted" id="sign">Sign Up</a>
 				<button type="submit" tabindex="4" class="btn btn-primary">Login</button>
+			</div>
+			<div class="common-pop" id="showError">
+				
 			</div>
 		</form>
 	</div>
