--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@ window.onload=function(){
 <body>
 <div class="wrap bg-gray">
 	<div class="login clearfix">
-		<form action="" class="login-form">
+		<form action="" class="login-form" method="get">
 			<div id="owl-login">
 				<div class="hand"></div>
 				<div class="hand hand-r"></div>
@@ -57,7 +57,7 @@ window.onload=function(){
 					<div class="controls">
 						<label for="email" class="control-label fa fa-envelope"></label>
 						<em class="email-icon"></em>
-						<input id="email" type="email" name="email" placeholder="域账号" tabindex="1" autofocus="autofocus" class="form-control input-medium">
+						<input id="text" type="text" name="email" placeholder="域账号" tabindex="1" autofocus="autofocus" class="form-control input-medium">
 					</div>
 				</div>
 				<div class="control-group">
