--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>登陆</title>
 <script type="text/javascript" src="static/js/jquery-2.2.3.min.js"></script>
+<script type="text/javascript" src="static/js/common.js"></script>
 <script type="text/javascript" src="static/js/login.js"></script>
 <link rel="stylesheet" type="text/css" href="static/style/base.css">
 <link rel="stylesheet" type="text/css" href="static/style/common.css">
