--- a/list.html
+++ b/list.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>列表</title>
+<script type="text/javascript" src="static/js/jquery-2.2.3.min.js"></script>
+<script type="text/javascript" src="static/js/list.js"></script>
 <link rel="stylesheet" type="text/css" href="static/style/base.css">
 <link rel="stylesheet" type="text/css" href="static/style/common.css">
 <link rel="stylesheet" type="text/css" href="static/style/list.css">
@@ -29,54 +31,32 @@ window.onload=window.onresize=function(){
 </head>
 <body>
 <div class="wrap bg-gray">
-	<nav class="header fs16" id="header">
-		<a href="" class="active">首页</a>
-		<a href="">jenkins</a>
-		<a href="">zenoss</a>
-		<a href="">gitlab</a>
-		<a href="">daiqingyang</a>
-		<a href="http://10.18.6.100/logout/">注销</a>
+	<nav class="header fs16 clearfix" id="header">
+        <div class="headerRight">
+            <div class="userName">
+                <span>userName</span>
+                <span>注销</span>
+            </div>
+        </div>
 	</nav>
 	<div class="pr">
 		<div class="list-sideBar" id="sideBar">
 			<nav class="list-ul">
-    			<li><span><em></em></span>常用功能操作</li>
                 <li class="active"><span></span><a href="">主机列表</a></li>
                 <li><span></span><a href="">虚机列表</a></li>
                 <li><span></span><a href="">批量导入</a></li>
     		</nav>
 		</div>
 		<section class="list-con" id="sec">
-			 <h2 class="title">网站项目管理</h2>
-			 <header>
-			 	关键字:<input type="text"><input type="button" value="查询">
-			 </header>
-             <div class="nav-tag">
-                 <ul class="nav-tag-list">
-                    <span class="select">公益</span>
-                    <span>科技</span>
-                    <span>出版</span>
-                    <span>娱乐</span>
-                    <span>收藏</span>
-                    <span>设计</span>
-                    <span>动漫游戏</span>
-                    <span>农业</span>
-                    <span>其他</span>
-                 </ul>
-                 <div class="nav-tag-btn">
-                     <a href="" class="add">添加</a>
-                 </div>
-             </div>
+			 <h2 class="title">主机列表</h2>
 			 <ul class="table-list">
 			 	<li>
-    		 		<span>归属地</span>
-    		 		<span>序列号</span>
-    		 		<span>主机名</span>
-    		 		<span>IP地址</span>
-    		 		<span>cpu</span>
-    		 		<span>内存</span>
-    		 		<span>硬盘</span>
-    		 		<span>归属人</span>
+    		 		<span>姓名</span>
+    		 		<span>AD账号</span>
+    		 		<span>机构</span>
+    		 		<span>手机号</span>
+    		 		<span>邮箱</span>
+    		 		<span>最后修改时间</span>
     		 		<span class="last">备注</span>
     		 	</li> 
 			 	<li>
@@ -86,295 +66,7 @@ window.onload=window.onresize=function(){
                     <span>172.31.3.70 </span>
                     <span>16</span>
                     <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                   <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                   <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
-                </li>
-                <li>
-                    <span>tj</span>
-                    <span>6CU421D4QD</span>
-                    <span>centos</span>
-                    <span>172.31.3.70 </span>
-                    <span>16</span>
-                    <span>未知</span>
-                    <span>未知</span>
-                    <span>李旭</span>
-                    <span class="last"><a href="">查看</a><a href="">删除</a></span>
+                    <span class="last"><a href="">编辑</a></span>
                 </li>
 			 </ul>
 			 <div class="table-footer clearfix">
