update login.js and list.html

--- a/list.html
+++ b/list.html
@@ -42,9 +42,8 @@ window.onload=window.onresize=function(){
 	<div class="pr">
 		<div class="list-sideBar" id="sideBar">
 			<nav class="list-ul">
-                <li class="active"><span></span><a href="">主机列表</a></li>
-                <li><span></span><a href="">虚机列表</a></li>
-                <li><span></span><a href="">批量导入</a></li>
+                <li class="active"><span></span><a href="">主机管理</a></li>
+                <li><span></span><a href="">用户管理</a></li>
     		</nav>
 		</div>
 		<section class="list-con" id="sec">
@@ -56,8 +55,10 @@ window.onload=window.onresize=function(){
     		 		<span>机构</span>
     		 		<span>手机号</span>
     		 		<span>邮箱</span>
-    		 		<span>最后修改时间</span>
-    		 		<span class="last">备注</span>
+    		 		<span>最后更新时间</span>
+                    <span >备注</span>
+    		 	    <span class="last">操作</span>
+                
     		 	</li> 
 			 	<li>
                     <span>tj</span>
@@ -66,27 +67,32 @@ window.onload=window.onresize=function(){
                     <span>172.31.3.70 </span>
                     <span>16</span>
                     <span>未知</span>
+                    <span>none</span>
                     <span class="last"><a href="">编辑</a></span>
                 </li>
 			 </ul>
 			 <div class="table-footer clearfix">
 			 	<div class="sum fl">共<span>265</span>条数据,当前是第<span>1</span>页</div>
-			 	<!-- <div class="page fr">
+			 	< <div class="page fr">
 			 		<a href="">首页</a>
-			 		<span class="active">1</span>
-			 		<span>2</span>
-			 		<span>3</span>
-			 		<span>4</span>
-			 		<span>5</span>
-			 		<span>6</span>
-			 		<span>7</span>
-			 		<span>8</span>
-			 		<span>9</span>
-			 		<a href="">下一页</a>
+                    <span class="active"> <a href=""></a></span>
+                    <span> <a href="">x</a></span>
+                    <span> <a href="">x</a></span>
+                    <span> <a href="">x</a></span>
+                    <span> <a href="">x</a></span>
+                    <span> <a href="">x</a></span>
+                    <span> <a href="">x</a></span>
+                    <span> <a href="">x</a></span>
+                    <span> <a href="">x</a></span>
+                    <span> <a href="">x</a></span>
+                    <span> <a href="">x</a></span>
+                    <span> <a href="">x</a></span>
+                    <a href="">下一页</a>
 			 		<a href="">尾页</a>
-			 	</div> -->
+			 	</div>
 			 </div>
 			<div class="browser-support">↓↓↓↓请使用高版本浏览器 [ IE支持IE8以上 ]</div>
+
 		</section>
 	</div>
 </div>
