--- a/list.html
+++ b/list.html
@@ -42,8 +42,8 @@ window.onload=window.onresize=function(){
 	<div class="pr">
 		<div class="list-sideBar" id="sideBar">
 			<nav class="list-ul">
-                <li class="active"><span></span><a href="">主机管理</a></li>
-                <li><span></span><a href="">用户管理</a></li>
+                <li><span></span><a href="hostList.html">主机管理</a></li>
+                <li class="active"><span></span><a href="list.html">用户管理</a></li>
     		</nav>
 		</div>
 		<section class="list-con" id="sec">
@@ -70,6 +70,226 @@ window.onload=window.onresize=function(){
                     <span>none</span>
                     <span class="last"><a href="">编辑</a></span>
                 </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span class="last"><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span class="last"><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span class="last"><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
+                <li>
+                    <span>tj</span>
+                    <span>6CU421D4QD</span>
+                    <span>centos</span>
+                    <span>172.31.3.70 </span>
+                    <span>16</span>
+                    <span>未知</span>
+                    <span>none</span>
+                    <span><a href="">编辑</a></span>
+                </li>
 			 </ul>
 			 <div class="table-footer clearfix">
 			 	<div class="sum fl">共<span>265</span>条数据,当前是第<span>1</span>页</div>
@@ -77,8 +297,8 @@ window.onload=window.onresize=function(){
 			 		<a href="">首页</a>
                     <span class="active"> <a href=""></a></span>
                     <span> <a href="">x</a></span>
-                    <span> <a href="">x</a></span>
-                    <span> <a href="">x</a></span>
+                    <span> <a href="views.html">x</a></span>
+                    <span> <a href="views.html">x</a></span>
                     <span> <a href="">x</a></span>
                     <span> <a href="">x</a></span>
                     <span> <a href="">x</a></span>
@@ -92,7 +312,6 @@ window.onload=window.onresize=function(){
 			 	</div>
 			 </div>
 			<div class="browser-support">↓↓↓↓请使用高版本浏览器 [ IE支持IE8以上 ]</div>
-
 		</section>
 	</div>
 </div>
