远程命令执行

--- a/hostList.html
+++ b/hostList.html
@@ -44,6 +44,7 @@ window.onload=window.onresize=function(){
 			<nav class="list-ul">
                 <li class="active"><span></span><a href="hostList.html">主机管理</a></li>
                 <li><span></span><a href="list.html">用户管理</a></li>
+                <li><span></span><a href="commandExecution.html">远程执行命令</a></li>
     		</nav>
 		</div>
 		<section class="list-con" id="sec">
