远程命令执行

--- a/commandExecution.html
+++ b/commandExecution.html
@@ -65,10 +65,10 @@ window.onload=window.onresize=function(){
                 <div class="formItem">
                     <a class="submit" href="javascript:">提交</a>
                 </div>
-                 <div class="formItem">
+                 <div class="formItem" id="showResult">
                     <label for="">返回结果</label>
                     <div class="inp">
-                       <textarea></textarea>
+                      <div class="result"></div>
                     </div>
                 </div>
             </div>
