远程命令执行

--- a/commandExecution.html
+++ b/commandExecution.html
@@ -65,10 +65,9 @@ window.onload=window.onresize=function(){
                 <div class="formItem">
                     <a class="submit" href="javascript:">提交</a>
                 </div>
-                 <div class="formItem" id="showResult">
-                    <label for="">返回结果</label>
+                 <div class="formItem" id="showRe">
                     <div class="inp">
-                      <div class="result"></div>
+                      <div class="result">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</div>
                     </div>
                 </div>
             </div>
