远程命令执行

--- a/list.html
+++ b/list.html
@@ -42,9 +42,9 @@ window.onload=window.onresize=function(){
 	<div class="pr">
 		<div class="list-sideBar" id="sideBar">
 			<nav class="list-ul">
-                <li><span></span><a href="hostList.html">主机管理</a></li>
-                <li class="active"><span></span><a href="list.html">用户管理</a></li>
-                <li><span></span><a href="commandExecution.html">远程执行命令</a></li>
+                <li><a href="hostList.html"><span></span>主机管理</a></li>
+                <li class="active"><a href="list.html"><span></span>用户管理</a></li>
+                <li><a href="commandExecution.html"><span></span>远程执行命令</a></li>
     		</nav>
 		</div>
 		<section class="list-con" id="sec">
